Add links to US sites

--- a/src/pug/index.pug
+++ b/src/pug/index.pug
@@ -6,7 +6,7 @@ html(lang='en')
         meta(charset='utf-8')
         meta(name='viewport', content='width=device-width, initial-scale=1, shrink-to-fit=no')
         meta(name='description', content='')
-        meta(name='author', content='')
+        meta(name='author', content='Enrico Teotti')
 
         title Enrico Teotti - Lavora con me
 
@@ -45,6 +45,13 @@ html(lang='en')
                 .masthead-subheading Lavora con
                 .masthead-heading.text-uppercase Enrico Teotti
                 a.btn.btn-primary.btn-xl.text-uppercase.js-scroll-trigger(href='#services') Scopri la mia storia
+
+
+        p.text-center
+            | Are you looking for my 
+            a(href='//enricoteotti.com') english business portal
+            | or 
+            a(href='//teotti.com') my blog?        
         // Services
         section#services.page-section
             .container
